--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: Obsidian Mkdocs
-site_description: A mkdocs wiki template for Obsidian
-site_url: https://mara-li.github.io/mkdocs_obsidian_template
+site_name: Thread Pullers Wiki
+site_description: A collection of campaign information for the Adventuring Party known as the Thread-Pullers
+site_url: https://lukasparsons.github.io/thread-pullers-wiki
 
 theme:
     name: 'material'
