--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Thread Pullers Wiki
 site_description: A collection of campaign information for the Adventuring Party known as the Thread-Pullers
-site_url: https://lukasparsons.github.io/thread-pullers-wiki
+site_url: https://www.dmluke.net
 
 theme:
     name: 'material'
