dnn: trying to fix nav sorting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,18 +5,18 @@ site_url: https://www.dmluke.net
 
 nav: 
     - Sessions:
-        - 'Session 0.md'
-        - 'Session 1.md'
-        - 'Session 2.md'
-        - 'Session 3.md'
-        - 'Session 4.md'
-        - 'Session 5.md'
-        - 'Session 6.md'
-        - 'Session 7.md'
-        - 'Session 12.md'
-        - 'Session 13.md'
-        - 'Session 14.md'
-        - 'Session 15.md'
+        - 'Sessions/Session 0.md'
+        - 'Sessions/Session 1.md'
+        - 'Sessions/Session 2.md'
+        - 'Sessions/Session 3.md'
+        - 'Sessions/Session 4.md'
+        - 'Sessions/Session 5.md'
+        - 'Sessions/Session 6.md'
+        - 'Sessions/Session 7.md'
+        - 'Sessions/Session 12.md'
+        - 'Sessions/Session 13.md'
+        - 'Sessions/Session 14.md'
+        - 'Sessions/Session 15.md'
 theme:
     name: 'material'
     logo: assets/logo/favicons.png
